--- a/lienhe.html
+++ b/lienhe.html
@@ -7,6 +7,7 @@
     <title>Liên hệ – GROOTTO CAFE</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="contact.css">
+    <link rel="icon" type="image/png" href="LOGO.jpg">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
 </head>
 
