--- a/menu.html
+++ b/menu.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu – GROOTTO CAFE</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="LOGO.jpg">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
 </head>
 
