upload source code

--- a/lienhe.html
+++ b/lienhe.html
@@ -43,7 +43,7 @@
             <!-- THÔNG TIN -->
             <div class="contact-info">
                 <h2>Thông tin liên hệ</h2>
-                <p><strong>📍 Địa chỉ:</strong> 25 Nguyễn Trãi, Quận 1, TP. Hồ Chí Minh</p>
+                <p><strong>📍 Địa chỉ:</strong> Số 20 ngõ 91 Nguyễn Chí Thanh, Hà Nội</p>
                 <p><strong>📞 Hotline:</strong> 0901 123 456</p>
                 <p><strong>📧 Email:</strong> grootto.cafe@gmail.com</p>
                 <p><strong>🕒 Giờ mở cửa:</strong> 7:00 – 22:00 mỗi ngày</p>
@@ -81,12 +81,12 @@
     </section>
 
     <!-- FOOTER -->
-    <footer class="footer">
+ <footer class="footer">
         <div class="footer-columns">
             <div class="footer-col">
                 <h3>GROOTTO CAFE</h3>
                 <p>Không gian của hương vị, nghệ thuật và cảm xúc.</p>
-                <p><strong>Địa chỉ:</strong> 25 Nguyễn Trãi, Quận 1, TP. Hồ Chí Minh</p>
+                <p><strong>Địa chỉ:</strong> Số 20 ngõ 91 Nguyễn Chí Thanh, Hà Nội</p>
                 <p><strong>Hotline:</strong> 0901 123 456</p>
             </div>
 
@@ -99,9 +99,9 @@
 
             <div class="footer-col">
                 <h3>Theo dõi chúng tôi</h3>
-                <a href="https://www.facebook.com/">Facebook</a>
-                <a href="https://www.instagram.com/">Instagram</a>
-                <a href="https://www.tiktok.com/">TikTok</a>
+                <a href="https://www.facebook.com/share/p/19ooaxAtYE/">Facebook</a>
+                <a href="https://www.instagram.com/reel/CzvzxRMPag2/?igsh=MTUyb2UwcmRmMTg4MA==">Instagram</a>
+                <a href="https://vt.tiktok.com/ZSyYKeQSK/">TikTok</a>
             </div>
         </div>
 
