--- a/menu.html
+++ b/menu.html
@@ -107,35 +107,35 @@
   </section>
 
   <!-- FOOTER -->
-  <footer class="footer ">
-        <div class="footer-columns ">
-            <div class="footer-col ">
+ <footer class="footer">
+        <div class="footer-columns">
+            <div class="footer-col">
                 <h3>GROOTTO CAFE</h3>
                 <p>Không gian của hương vị, nghệ thuật và cảm xúc.</p>
-                <p><strong>Địa chỉ:</strong> 25 Nguyễn Trãi, Quận 1, TP. Hồ Chí Minh</p>
+                <p><strong>Địa chỉ:</strong> Số 20 ngõ 91 Nguyễn Chí Thanh, Hà Nội</p>
                 <p><strong>Hotline:</strong> 0901 123 456</p>
             </div>
 
-            <div class="footer-col ">
+            <div class="footer-col">
                 <h3>Về chúng tôi</h3>
-                <a href="menu.html ">Menu</a>
-                <a href="cart.html ">Giỏ hàng</a>
-                <a href="lienhe.html ">Liên hệ</a>
+                <a href="menu.html">Menu</a>
+                <a href="cart.html">Giỏ hàng</a>
+                <a href="lienhe.html">Liên hệ</a>
             </div>
 
-            <div class="footer-col ">
+            <div class="footer-col">
                 <h3>Theo dõi chúng tôi</h3>
-                <a href="https://www.facebook.com/ ">Facebook</a>
-                <a href="https://www.instagram.com/ ">Instagram</a>
-                <a href="https://www.tiktok.com/ ">TikTok</a>
+                <a href="https://www.facebook.com/share/p/19ooaxAtYE/">Facebook</a>
+                <a href="https://www.instagram.com/reel/CzvzxRMPag2/?igsh=MTUyb2UwcmRmMTg4MA==">Instagram</a>
+                <a href="https://vt.tiktok.com/ZSyYKeQSK/">TikTok</a>
             </div>
         </div>
 
-        <div class="footer-bottom ">
+        <div class="footer-bottom">
             © 2025 GROOTTO CAFE | Designed by Ha Huy Hoang Ha
         </div>
     </footer>
-
+    
   <!-- SCRIPT -->
   <script src="script.js "></script>
 </body>
