upload source code

--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
 
     <!-- ☕ HERO VIDEO -->
     <section class="hero">
-        <video autoplay muted loop playsinline class="hero-video">
-      <source src="https://cdn.pixabay.com/video/2023/03/06/153456-805688480_large.mp4" type="video/mp4">
-    </video>
+        <img src="hinhnen.jpg" alt="Hình nền Grootto" class="hero-video">
         <div class="overlay">
             <h1>Thưởng thức hương vị cà phê nguyên bản</h1>
             <p>Không chỉ là cà phê – đó là phong cách sống.</p>
