--- a/lienhe.html
+++ b/lienhe.html
@@ -28,9 +28,7 @@
 
     <!-- HERO -->
     <section class="hero">
-        <video autoplay muted loop playsinline class="hero-video">
-      <source src="https://cdn.pixabay.com/video/2022/07/11/124174-735772346_large.mp4" type="video/mp4">
-    </video>
+         <img src="hinhnen.jpg" alt="Hình nền Grootto" class="hero-video">
         <div class="overlay">
             <h1>Liên hệ với GROOTTO CAFE</h1>
             <p>Chúng tôi luôn sẵn sàng lắng nghe bạn ☕</p>
