--- a/menu.html
+++ b/menu.html
@@ -28,9 +28,7 @@
 
     <!-- HERO -->
     <section class="hero" style="height: 60vh;">
-        <video autoplay muted loop playsinline class="hero-video">
-      <source src="https://cdn.pixabay.com/video/2021/05/19/73773-555156968_large.mp4" type="video/mp4">
-    </video>
+             <img src="hinhnen.jpg" alt="Hình nền Grootto" class="hero-video">
         <div class="overlay">
             <h1>Thực đơn GROOTTO</h1>
             <p>Thức uống & bánh ngọt được yêu thích nhất</p>
