upload source code

--- a/cart.html
+++ b/cart.html
@@ -8,8 +8,18 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="LOGO.jpg">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
-    
+    <meta name="description" content="Xem giỏ hàng của bạn tại GROOTTO CAFE – cà phê và bánh ngọt nguyên chất, giao tận nơi.">
+    <meta name="keywords" content="giỏ hàng GROOTTO, đặt cà phê online, giao hàng cafe, thanh toán cà phê">
+   <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PWW3WC6TR2"></script>
+   <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-PWW3WC6TR2');
+  </script>
 </head>
+
 
 <body>
     <!-- 🧭 HEADER -->
