--- a/lienhe.html
+++ b/lienhe.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="vi">
 
-<head>
+<>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Liên hệ – GROOTTO CAFE</title>
@@ -9,6 +9,18 @@
     <link rel="stylesheet" href="contact.css">
     <link rel="icon" type="image/png" href="LOGO.jpg">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
+    <meta name="description" content="Liên hệ với GROOTTO CAFE để đặt bàn, phản hồi hoặc hợp tác – chúng tôi luôn sẵn sàng lắng nghe.">
+    <meta name="keywords" content="liên hệ GROOTTO, cafe Hà Nội, góp ý khách hàng, GROOTTO CAFE địa chỉ, hotline cafe">
+      <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PWW3WC6TR2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-PWW3WC6TR2');
+  </script>
+
+
 </head>
 
 <body>
