--- a/menu.html
+++ b/menu.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="LOGO.jpg">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
+    <meta name="description" content="Khám phá menu đồ uống và bánh ngọt tại GROOTTO CAFE – Espresso, Latte, Cold Brew và nhiều món khác.">
+    <meta name="keywords" content="menu GROOTTO, cà phê espresso, latte, cold brew, bánh ngọt Hà Nội, cafe ngon Hà Nội">
+     <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PWW3WC6TR2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-PWW3WC6TR2');
+  </script>
 </head>
 
 <body>
