--- a/thanhtoan.html
+++ b/thanhtoan.html
@@ -9,6 +9,16 @@
     <link rel="stylesheet" href="checkout.css" />
     <link rel="icon" type="image/png" href="LOGO.jpg">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Playfair+Display:wght@600&display=swap" rel="stylesheet" />
+    <meta name="description" content="Thanh toán đơn hàng GROOTTO CAFE nhanh chóng và an toàn – xác nhận thông tin và nhận cà phê tại nhà.">
+    <meta name="keywords" content="thanh toán GROOTTO, đặt hàng cafe, giao hàng cà phê, GROOTTO CAFE checkout">
+     <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PWW3WC6TR2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-PWW3WC6TR2');
+  </script>
 </head>
 
 <body>
